# phenocoder

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: architecture.md  conf.py  index.md  installation.md  requirements.txt  workflow.md
docs/_static/: catppuccin.css
docs/api/: generator.md  index.md  models.md  phenocoder.md  sampling.md  spatial.md  utils.md
examples/: example_workflow.py
phenocoder/: __init__.py  _cluster.py  _dataset.py  _embedding.py  _features.py  _phenocode.py  _phenocoder.py  cluster.py  dataset.py  embedding.py  features.py  generator.py  model.py  phenocode.py  phenocoder.py  plot.py  qc.py  sampling.py  spatial.py  train.py  utils.py
tests/: __init__.py  conftest.py  test_2d.py  test_3d.py  test_dataset.py  test_dataset_generator.py  test_io.py  test_organoid_encoding.py  test_predict.py  test_spatial_stats.py  test_subsampling.py  test_train.py  test_workflow.py
tests/data/2d/: labels.tif  mask.tif  positions.csv
tests/data/3d/labels/: 240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z01C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z03C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z04C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z08C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z09C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z10C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z13C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z15C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z17C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z18C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z19C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z21C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z22C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z23C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z24C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z25C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z27C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z29C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z30C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z31C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z32C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z33C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z34C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z37C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z38C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z39C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z40C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z41C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z42C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z44C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z46C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z48C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z49C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z50C01.tif  240318ITBOD071RO00403_240421_203351_A06_T0003F002L03A04Z51C01.tif  240318ITBOD071RO00403_240421_203351_G04_T0143F002L143A04Z01C01.tif  240318ITBOD071RO00403_240421_203351_G04_T0143F002L143A04Z02C01.tif  240318ITBOD071RO00403_240421_203351_G04_T0143F002L143A04Z03C01.tif  240318ITBOD071RO00403_240421_203351_G04_T0143F002L143A04Z04C01.tif  240318ITBOD071RO00403_240421_203351_G04_T0143F002L143A04Z05C01.tif  (+101 more)
tests/data/3d/tables/: A06_01.csv  A06_02.csv  A06_08.csv  A06_09.csv  A06_10.csv  A06_11.csv  A06_12.csv  A06_13.csv  A06_14.csv  A06_15.csv  A06_16.csv  A06_17.csv  A06_18.csv  A06_19.csv  A06_20.csv  A06_21.csv  A06_22.csv  A06_23.csv  A06_24.csv  A06_25.csv  A06_26.csv  A06_27.csv  (+114 more)
