[project]
name = "phenocoder"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "tensorflow==2.19.0",
    "spatialdata>=0.5.0",
    "matplotlib>=3.10.6",
    "squidpy>=1.6.5",
    "bbknn>=1.6.0",
    "spatialdata-plot>=0.2.12",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.37.0",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]

[tool.ruff]
line-length = 120
[tool.basedpyright]
typeCheckingMode = "basic"
reportUnknownVariableType = false
reportUnknownParameterType = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportArgumentType = false
reportOptionalMemberAccess = false
reportAttributeAccessIssue = false
reportIndexIssue = false
reportOptionalSubscript = false
reportCallIssue = false
reportAssignmentType = false
reportReturnType = false
reportOptionalIterable = false
reportOperatorIssue = false
