[project]
name = "phenocoder"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10, <3.13"
dependencies = [
    # Linux: full CUDA stack
    "tensorflow[and-cuda]>=2.19.0; sys_platform == 'linux'",
    # macOS (and any non-Linux): plain TF, no CUDA
    "tensorflow>=2.19.0; sys_platform != 'linux'",
    # Mac GPU acceleration via Metal
    "tensorflow-metal>=1.2.0; sys_platform == 'darwin'",
    "keras",
    "spatialdata>=0.5.0",
    "matplotlib>=3.10.6",
    "squidpy>=1.6.5",
    "bbknn>=1.6.0",
    "spatialdata-plot>=0.2.12",
    "igraph>=1.0.0",
    "leidenalg>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.37.0",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]

[tool.ruff]
line-length = 120
[tool.basedpyright]
typeCheckingMode = "basic"
reportUnknownVariableType = false
reportUnknownParameterType = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportArgumentType = false
reportOptionalMemberAccess = false
reportAttributeAccessIssue = false
reportIndexIssue = false
reportOptionalSubscript = false
reportCallIssue = false
reportAssignmentType = false
reportReturnType = false
reportOptionalIterable = false
reportOperatorIssue = false
