[project]
name = "phenocoder"
version = "0.1.0"
description = "A machine-learning framework that combines conditional variational autoencoders with spatial graph analysis to learn unsupervised phenotypic embeddings of complex tissue architectures from microscopy images."
requires-python = ">=3.10, <3.13"
dependencies = [
    # Linux: full CUDA stack
    "tensorflow[and-cuda]>=2.19.0; sys_platform == 'linux'",
    # macOS (and any non-Linux): plain TF, no CUDA. Capped at <2.20 because
    # tensorflow-metal 1.2.0 (latest) only supports TF up to 2.19/2.20 — newer
    # TF breaks the Metal plugin load on macOS.
    "tensorflow>=2.19.0,<2.20; sys_platform != 'linux'",
    # Mac GPU acceleration via Metal
    "tensorflow-metal>=1.2.0; sys_platform == 'darwin'",
    "keras",
    "setuptools<81",
    "spatialdata>=0.5.0",
    "matplotlib>=3.10.6",
    "squidpy>=1.6.5",
    "bbknn>=1.6.0",
    "spatialdata-plot>=0.2.12",
    "igraph>=1.0.0",
    "leidenalg>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.37.0",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]
docs = [
    "sphinx>=8.0",
    "furo>=2024.8",
    "myst-parser>=4.0",
]

[tool.ruff]
line-length = 120
[tool.basedpyright]
typeCheckingMode = "basic"
reportUnknownVariableType = false
reportUnknownParameterType = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportArgumentType = false
reportOptionalMemberAccess = false
reportAttributeAccessIssue = false
reportIndexIssue = false
reportOptionalSubscript = false
reportCallIssue = false
reportAssignmentType = false
reportReturnType = false
reportOptionalIterable = false
reportOperatorIssue = false
